--- a/loans-qa.yml
+++ b/loans-qa.yml
@@ -1,16 +1,11 @@
-spring:
-  config:
-    activate:
-      on-profile: "qa"
-
 build:
-  version: "2.0"
+  version: "1.0"
 
 loans:
-  message: "Welcome to EazyBank loans related QA APIs "
+  message: "Welcome to EazyBank loans related prod APIs "
   contactDetails:
-    name: "Cyrano Marita - QA Lead"
-    email: "cyrano@eazybank.com"
+    name: "Pelias Sudhir - Product Owner"
+    email: "pelias@eazybank.com"
   onCallSupport:
-    - (785) 545-6565
-    - (853) 546-3467
+    - (723) 656-8709
+    - (156) 342-0956
