--- a/loans-prod.yml
+++ b/loans-prod.yml
@@ -1,15 +1,11 @@
-profiles:
-  active:
-    - "qa"
-
 build:
-  version: "3.0"
+  version: "1.0"
 
 loans:
-  message: "Welcome to EazyBank loans related local APIs "
+  message: "Welcome to EazyBank loans related prod APIs "
   contactDetails:
-    name: "Amaal Grega - Developer"
-    email: "amaal@eazybank.com"
+    name: "Pelias Sudhir - Product Owner"
+    email: "pelias@eazybank.com"
   onCallSupport:
-    - (452) 456-2176
-    - (546) 764-8934
+    - (723) 656-8709
+    - (156) 342-0956
