--- a/loans-qa.yml
+++ b/loans-qa.yml
@@ -1,11 +1,11 @@
 build:
-  version: "1.0"
+  version: "2.0"
 
 loans:
-  message: "Welcome to EazyBank loans related prod APIs "
+  message: "Welcome to EazyBank loans related QA APIs "
   contactDetails:
-    name: "Pelias Sudhir - Product Owner"
-    email: "pelias@eazybank.com"
+    name: "Cyrano Marita - QA Lead"
+    email: "cyrano@eazybank.com"
   onCallSupport:
-    - (723) 656-8709
-    - (156) 342-0956
+    - (785) 545-6565
+    - (853) 546-3467
